<<<<<<< HEAD
<resources>
    <string name="app_name">Demo</string>
    <string name="gg">gg</string>
    <string name="username">username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="btnlogin">btnlogin</string>
    <string name="btnregister">btnRegister</string>
    <string name="btnforgot">btnForgot</string>
    <string name="login">Login</string>
    <string name="ForgotPassword">ForgotPassword</string>
    <string name="Register">Register</string>
    <string name="Forgot">Forgot Password</string>
    <string name="logoS">LogoS</string>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="version1_0">Version1.0</string>
    <string name="vesion_1_0">Vesion 1.0</string>
    <string name="creat_account">Creat Account</string>
    <string name="create_accout_here">Create Accout Here</string>
    <string name="logo">Logo</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="LogoS">LogoS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="full_name">full_name</string>
    <string name="Username">Username</string>
    <string name="nameTitle">nameTitle</string>
    <string name="Name_Title">Name_Title</string>
=======
<resources>
    <string name="app_name">Demo</string>
    <string name="gg">gg</string>
    <string name="username">username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="btnlogin">btnlogin</string>
    <string name="btnregister">btnRegister</string>
    <string name="btnforgot">btnForgot</string>
    <string name="login">Login</string>
    <string name="ForgotPassword">ForgotPassword</string>
    <string name="Register">Register</string>
    <string name="Forgot">Forgot Password</string>
    <string name="logoS">LogoS</string>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="version1_0">Version1.0</string>
    <string name="vesion_1_0">Vesion 1.0</string>
    <string name="creat_account">Creat Account</string>
    <string name="create_accout_here">Create Accout Here</string>
    <string name="logo">Logo</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="LogoS">LogoS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="full_name">full_name</string>
    <string name="Username">Username</string>
    <string name="nameTitle">nameTitle</string>
    <string name="Name_Title">Name_Title</string>
    <string name="forget_password">forget password</string>
    <string name="forget_password_detail">Forget Password Detail</string>
    <string name="enter_email">Email</string>
    <string name="next_btn">NEXT</string>
    <string name="new_credentials">New Credentials</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your password has been updated!</string>
    <string name="add_pet">Add</string>
    <string name="delete">Delete</string>
    <string name="test_connection">Test Connection</string>
    <string name="title_activity_medication">Medication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_pet">EDIT</string>
    <string name="pet_name">Pet Name</string>
>>>>>>> pr/3
</resources>