<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> pr/3
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="320dp"
<<<<<<< HEAD
            android:layout_height="320dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/the_wild_vet"
            android:layout_gravity="center"/>
=======
            android:layout_height="239dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/the_wild_vet" />
>>>>>>> pr/3

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
<<<<<<< HEAD
=======
                android:id="@+id/accountUsername"
>>>>>>> pr/3
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Username"
                app:startIconDrawable="@drawable/field_username_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
<<<<<<< HEAD
=======
                android:id="@+id/accountPassword"
>>>>>>> pr/3
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                app:startIconDrawable="@drawable/field_password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

<<<<<<< HEAD
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="Login"
            android:textSize="14sp"
            android:onClick="LoginToHomepage"
            android:elevation="5dp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="730dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
=======
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forget_btn"
                    android:text="@string/forget_password"
                    android:textColor="@color/black"
                    android:onClick="ForgetPasswordBtn"
                    android:background="#00000000" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="Login"
                android:textSize="14sp"
                android:onClick="LoginToHomepage"
                android:elevation="5dp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="730dp" />

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
>>>>>>> pr/3

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Account Here"
                android:layout_marginLeft="20dp"
<<<<<<< HEAD
                android:textSize="18dp"/>
=======
                android:textSize="18dp"
                android:layout_centerVertical="true"/>
>>>>>>> pr/3

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REGIASTER"
                android:layout_marginLeft="30dp"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:paddingRight="25dp"
                android:paddingBottom="20dp"
                android:onClick="callToSignup"
<<<<<<< HEAD
                android:elevation="5dp"/>

        </LinearLayout>
=======
                android:elevation="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
>>>>>>> pr/3


    </LinearLayout>

<<<<<<< HEAD
</androidx.constraintlayout.widget.ConstraintLayout>
=======
</ScrollView>
>>>>>>> pr/3
